cabal-version: 3.0
name: agent-fork
version: 0.1.0.0
license: BSD-2-Clause
license-file: LICENSE
author: Tony Day
maintainer: tonyday567@gmail.com
synopsis: Agent harness for pi executable with Claude-style LLM interface
description:
  Harness wrapping the pi executable to provide a Claude-style LLM interface.
  Designed for agentic code exploration, type wrangling, and interactive experimentation.

build-type: Simple
extra-doc-files: CHANGELOG.md

common warnings
  ghc-options: -Wall

library
  import: warnings
  exposed-modules: Agent.Fork
  build-depends:
    base >=4.14 && <5,
    directory >=1.3 && <1.4,
    process >=1.6.26 && <1.7

  hs-source-dirs: src
  default-language: GHC2024
